# pokeapi-databricks

./: .gitignore  AGENTS.md  README.md  databricks.yml  pyproject.toml
docs/: architecture.md  battle-foundation.md  bronze-ingestion.md  delivery-gates.md  gold-pokemon-catalog.md  governance.md  silver-pilot.md
notebooks/: pokemon_matchup_dashboard.py
resources/: jobs.yml  schemas.yml
src/pokeapi_lakehouse/: __init__.py  battle.py  battle_cli.py  bronze.py  cli.py  config.py  endpoints.py  gold.py  gold_cli.py  pokeapi_client.py  silver.py  silver_cli.py  sql_queries.py  time_utils.py
src/pokeapi_lakehouse/sql/: create_bronze_table.sql  create_gold_ability.sql  create_gold_battle_move.sql  create_gold_pokemon_battle_profile.sql  create_gold_pokemon_catalog.sql  create_gold_pokemon_matchup.sql  create_gold_pokemon_move_pool.sql  create_gold_ruleset.sql  create_gold_runs.sql  create_gold_type.sql  create_gold_type_matchup_matrix.sql  create_ingestion_failures.sql  create_ingestion_runs.sql  create_silver_ability.sql  create_silver_ability_translation.sql  create_silver_language.sql  create_silver_move.sql  create_silver_move_translation.sql  create_silver_pokemon.sql  create_silver_pokemon_ability.sql  create_silver_pokemon_media.sql  create_silver_pokemon_move.sql  create_silver_pokemon_species.sql  create_silver_pokemon_species_translation.sql  create_silver_pokemon_stat.sql  create_silver_pokemon_type.sql  create_silver_quarantine.sql  create_silver_runs.sql  create_silver_stat.sql  create_silver_type.sql  create_silver_type_damage_relation.sql  create_silver_type_translation.sql  insert_ingestion_failures.sql  insert_ingestion_runs.sql  insert_silver_quarantine.sql  merge_bronze_table.sql  merge_gold_ability.sql  merge_gold_battle_move.sql  merge_gold_pokemon_battle_profile.sql  merge_gold_pokemon_catalog.sql  (+79 more)
tests/: test_battle.py  test_bronze.py  test_config.py  test_endpoints.py  test_gold.py  test_pokeapi_client.py  test_silver.py  test_sql_queries.py  test_time_utils.py
