[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "pokeapi-lakehouse"
version = "0.4.1"
description = "Pipeline Lakehouse da PokéAPI para Databricks Free Edition"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bronze_ingestion = "pokeapi_lakehouse.cli:main"
silver_transform = "pokeapi_lakehouse.silver_cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.5,<1",
  "wheel>=0.44,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pokeapi_lakehouse = ["sql/*.sql"]

[tool.setuptools.exclude-package-data]
pokeapi_lakehouse = ["sql/insert_ingestion_runs.sql"]

[tool.pytest.ini_options]
addopts = "-ra -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pokeapi_lakehouse"]

[[tool.mypy.overrides]]
module = ["pyspark", "pyspark.*"]
ignore_missing_imports = true
